--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             overflow: hidden; 
             background: #000; 
             font-family: 'Cinzel Decorative', serif; 
-            touch-action: manipulation; /* Cải thiện touch trên mobile */
+            touch-action: manipulation;
         }
         #canvas-container { 
             width: 100vw; height: 100vh; position: fixed; top: 0; left: 0; 
@@ -35,7 +35,7 @@
         }
         @keyframes spin { to { transform: rotate(360deg); } }
 
-        /* UI Layer - Responsive */
+        /* UI Layer - Chỉ còn tiêu đề */
         #ui-layer {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             z-index: 10; pointer-events: none;
@@ -46,7 +46,7 @@
 
         h1 {
             font-family: 'Cinzel Decorative', serif;
-            font-size: clamp(36px, 12vw, 68px); /* Tự động co giãn theo màn hình */
+            font-size: clamp(36px, 12vw, 68px);
             font-weight: 700; margin: 0 0 20px 0;
             letter-spacing: clamp(6px, 2vw, 12px);
             background: linear-gradient(to bottom, #fffbe6, #f5d5a0, #d4af37);
@@ -57,56 +57,7 @@
             text-align: center;
         }
 
-        .upload-wrapper {
-            margin-top: auto; /* Đẩy xuống đáy */
-            margin-bottom: 100px; /* Tránh bị webcam che */
-            pointer-events: auto; opacity: 1;
-            transition: opacity 0.8s ease;
-            width: 100%;
-            max-width: 400px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .upload-btn {
-            background: rgba(15, 15, 15, 0.7);
-            border: 1px solid rgba(245, 213, 160, 0.4);
-            color: #f5d5a0; 
-            padding: 18px 40px; /* To hơn cho dễ bấm */
-            cursor: pointer;
-            text-transform: uppercase; 
-            letter-spacing: 4px; 
-            font-size: clamp(12px, 3.5vw, 14px);
-            backdrop-filter: blur(10px); 
-            border-radius: 8px;
-            transition: all 0.5s ease;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.3);
-            min-width: 220px;
-            text-align: center;
-        }
-        .upload-btn:hover, .upload-btn:active {
-            background: linear-gradient(45deg, #d4af37, #f5d5a0);
-            color: #000; border-color: transparent;
-            box-shadow: 0 0 30px rgba(245, 213, 160, 0.6);
-            transform: translateY(-2px) scale(1.05);
-        }
-
-        .hint-text {
-            color: rgba(245, 213, 160, 0.7); 
-            font-size: clamp(10px, 2.8vw, 12px);
-            margin-top: 16px;
-            letter-spacing: 2px; 
-            text-transform: uppercase;
-            text-align: center;
-            line-height: 1.4;
-        }
-
-        .ui-hidden { opacity: 0 !important; pointer-events: none !important; }
-
-        #file-input { display: none; }
-
-        /* Webcam preview - nhỏ hơn và không che nút */
+        /* Webcam preview - nhỏ và ở giữa đáy */
         #webcam-wrapper {
             position: absolute; 
             bottom: 20px; 
@@ -123,16 +74,12 @@
             box-shadow: 0 4px 15px rgba(0,0,0,0.4);
         }
 
-        /* Ẩn webcam trên màn hình quá nhỏ để tránh rối */
         @media (max-height: 500px) {
             #webcam-wrapper { display: none; }
         }
 
-        /* Tối ưu thêm cho màn hình ngang (landscape mobile) */
         @media (orientation: landscape) and (max-height: 600px) {
             h1 { font-size: clamp(30px, 8vw, 50px); margin-bottom: 10px; }
-            .upload-wrapper { margin-bottom: 60px; }
-            .upload-btn { padding: 14px 32px; }
         }
     </style>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap">
@@ -148,20 +95,12 @@
 
     <div id="ui-layer">
         <h1>MERRY CHRISTMAS</h1>
-        <div class="upload-wrapper">
-            <label class="upload-btn">
-                Thêm ảnh của bạn
-                <input type="file" id="file-input" multiple accept="image/*">
-            </label>
-            <div class="hint-text">Nhấn H ẩn/hiện nút<br>Dùng tay: chụm / nắm / xòe</div>
-        </div>
     </div>
 
     <div id="webcam-wrapper">
         <video id="webcam" autoplay playsinline muted style="width:100%; height:100%; object-fit: cover;"></video>
     </div>
 
-    <!-- Phần script giữ nguyên hoàn toàn (không thay đổi gì ở đây) -->
     <script type="importmap">
     {
         "imports": {
@@ -205,6 +144,32 @@
         let snowParticles;
         let handLandmarker = null, video = null;
 
+        // Danh sách tất cả ảnh trong thư mục (bạn đã liệt kê)
+        const photoFiles = [
+            'IMG_0183.jpg',
+            'IMG_0193.jpg',
+            'IMG_0397 (1).jpg',
+            'IMG_0397.jpg',
+            'IMG_0412.jpg',
+            'IMG_4933.jpg',
+            'IMG_5387.jpg',
+            'IMG_5386.jpg',
+            'IMG_5390.jpg',
+            'IMG_5484.jpg',
+            'IMG_9882.jpg',
+            'IMG_2024122519880493.jpg',
+            'IMG_2025021716457735.jpg',
+            'IMG_2025060100060564.jpg',
+            'IMG_2025072212171412.jpg',
+            'IMG_2025072518188806.jpg',
+            'IMG_20250828234015823.jpg',
+            'IMG_20250828234016059.jpg',
+            'IMG_2025083022252838.jpg',
+            'IMG_2025083022293412.jpg',
+            'IMG_2025120408860616.jpg',
+            'Reisen_IMG_0250201083632.jpg'
+        ];
+
         async function init() {
             setupScene();
             setupLights();
@@ -215,6 +180,9 @@
             setupPostProcessing();
             setupEvents();
             await initMediaPipeHandTracking();
+
+            // Tự động load tất cả ảnh trong danh sách
+            loadAllPhotos();
 
             const loader = document.getElementById('loader');
             loader.style.opacity = 0;
@@ -246,6 +214,9 @@
             mainGroup.add(photoGroup);
             scene.add(mainGroup);
         }
+
+        // Các hàm còn lại giữ nguyên (setupLights, createFairyLights, v.v.)
+        // ... (đoạn code từ các phiên bản trước, mình giữ nguyên để file đầy đủ)
 
         function setupLights() {
             scene.add(new THREE.AmbientLight(0xffffff, 0.4));
@@ -458,6 +429,7 @@
             }
         }
 
+        // Hàm thêm ảnh (giữ nguyên tỉ lệ)
         function addPhoto(texture) {
             const group = new THREE.Group();
 
@@ -499,16 +471,21 @@
             particleSystem.push(new Particle(group, 'PHOTO'));
         }
 
-        function handleUpload(e) {
-            Array.from(e.target.files).forEach(file => {
-                const reader = new FileReader();
-                reader.onload = ev => {
-                    new THREE.TextureLoader().load(ev.target.result, tex => {
-                        tex.colorSpace = THREE.SRGBColorSpace;
-                        addPhoto(tex);
-                    });
-                };
-                reader.readAsDataURL(file);
+        // Tự động load tất cả ảnh trong danh sách
+        function loadAllPhotos() {
+            const loader = new THREE.TextureLoader();
+            photoFiles.forEach(filename => {
+                loader.load(
+                    filename,
+                    (texture) => {
+                        texture.colorSpace = THREE.SRGBColorSpace;
+                        addPhoto(texture);
+                    },
+                    undefined,
+                    (err) => {
+                        console.warn(`Không load được ảnh: ${filename}`, err);
+                    }
+                );
             });
         }
 
@@ -603,14 +580,6 @@
                 camera.updateProjectionMatrix();
                 renderer.setSize(window.innerWidth, window.innerHeight);
                 composer.setSize(window.innerWidth, window.innerHeight);
-            });
-
-            document.getElementById('file-input').addEventListener('change', handleUpload);
-
-            window.addEventListener('keydown', e => {
-                if (e.key.toLowerCase() === 'h') {
-                    document.querySelector('.upload-wrapper').classList.toggle('ui-hidden');
-                }
             });
         }
 
