--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <h1>MERRY CHRISTMAS</h1>
     </div>
 
+    <div id="webcam-wrapper">
+        <video id="webcam" autoplay playsinline muted></video>
+    </div>
+
     <script type="importmap">
     {
         "imports": {
