--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap">
 </head>
 <body>
-
+<audio id="christmas-music" loop autoplay volume="0.3">
+    <source src="https://www.fesliyanstudios.com/play/mp3/7145" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
     <div id="loader">
         <div class="spinner"></div>
         <div class="loader-text">Igniting Christmas Lights</div>
@@ -19,7 +22,9 @@
     <div id="ui-layer">
         <h1>MERRY CHRISTMAS</h1>
     </div>
-
+<audio id="christmas-music" loop autoplay preload="auto">
+    <source src="jingle-bells-445113.mp3" type="audio/mpeg">
+</audio>
     <div id="webcam-wrapper">
         <video id="webcam" autoplay playsinline muted></video>
     </div>
